--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,25 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+common: &common
+  adapter: postgresql
+  encoding: utf8
+  template: template0 # Required for UTF8 encoding
+  # When using postgress.app for example you do not want to specify user / pw
+  <% if ENV["TD_POSTGRES_USER"] %>
+  username: <%= ENV["TD_USER"] %>
+  <% end %>
+  <% if ENV["REMOTE_WIND_POSTGRES_PASSWORD"] %>
+  password: <%= ENV["TD_POSTGRES_PASSWORD"] %>
+  <% end %>
+  <% if ENV["REMOTE_WIND_POSTGRES_HOST"] %>
+  host: <%= ENV["TD_POSTGRES_HOST"] || 'localhost' %>
+  <% end %>
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  <<: *common
+  database: <%= ENV["REMOTE_WIND_POSTGRES_DATABASE_DEV"] || "td_dev" %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+  <<: *common
+  database: <%= ENV["REMOTE_WIND_POSTGRES_DATABASE_TEST"] || "td_test" %>
